@@ -1,3 +1,15 @@
+2011-10-24  Ivan Briano  <ivan@profusion.mobi>
+
+        [EFL] Build fix. Rename all instances of a variable when it gets changed
+        https://bugs.webkit.org/show_bug.cgi?id=70732
+
+        Unreviewed build fix.
+
+        * ewk/ewk_js.cpp:
+        (ewk_js_property_set): s/obj/object/
+        * ewk/ewk_view.cpp:
+        (ewk_view_js_object_add): s/exec/executeState/
+
 2011-10-21  Gyuyoung Kim  <gyuyoung.kim@samsung.com>
 
         [EFL] Change efl style local variables with WebKit coding Style.
